Fix table heading width on mobile

--- a/resources/assets/styles/partials/table.scss
+++ b/resources/assets/styles/partials/table.scss
@@ -1,5 +1,6 @@
 .table {
 	.table__heading {
+		max-width: 100%;
 		width: max-content;
 		margin: 60px auto 0;
 
